components/Quote/Quote.module.scss
.container {
    @include border-radius-m;

    display: flex;
    justify-content: center;
    margin: $spacing-6 auto;
    padding: $spacing-4;
    background: $color-base-100;
}

.quote {
    & + & {
        margin-left: 0.375rem;
    }
}

.left,
.right {
    flex-shrink: 0;
}

.left {
    display: flex;
    margin-right: $spacing-3;
}

.right {
    display: flex;
    align-items: flex-end;
    margin-left: $spacing-3;
}

.content {
    @include paragraph;

    color: $color-base-700;
}

